fix: add backdrop blur to increase readability to a11y warnings.

--- a/assets/source/3.0/sass/a11y.scss
+++ b/assets/source/3.0/sass/a11y.scss
@@ -10,5 +10,6 @@ body.logged-in {
     font-size: .8em;
     border-radius: 3px;
     border: 1px solid #fff;
+    backdrop-filter: blur(4px);
   }
 }
